Fikset problem med NP på FolkeregisterStatus