@@ -13,7 +13,6 @@ import reactor.core.publisher.Flux;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -39,7 +38,7 @@ public class DeployService {
                                 .infoElement(type)
                                 .hendelser(hendelser)
                                 .build()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Flux<OrdreResponseDTO.PdlStatusDTO> sendOrders(List<Ordre> ordres) {
